# gammalib

./: .gitignore  .plastic  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  SAMP-registered.txt  autogen.sh  config.h.in  configure  configure.ac  fileout.txt  gammalib.pc.in  gammalib.sh  gammalib.spec.in  jenkins_init.sh  libtool  reconf.sh  registrations.txt  sonar-project.properties  testall.sh  testconf.sh.in
examples/cpp/: Makefile.am  createfits.cpp  createskymap.cpp  interpolate.cpp  optimize.cpp  readmodel.cpp
include/: GApplication.hpp  GApplicationPar.hpp  GApplicationPars.hpp  GArf.hpp  GBase.hpp  GBilinear.hpp  GCTAEventAtom.hpp  GCTAEventList.hpp  GCTAInstDir.hpp  GCTAObservation.hpp  GCTAPointing.hpp  GCTAResponse.hpp  GCaldb.hpp  GContainer.hpp  GCsv.hpp  GDaemon.hpp  GData.hpp  GDerivative.hpp  GEbounds.hpp  GEnergies.hpp  GEnergy.hpp  GEphemerides.hpp  GEvent.hpp  GEventAtom.hpp  GEventBin.hpp  GEventCube.hpp  GEventList.hpp  GEvents.hpp  GException.hpp  GFft.hpp  GFftWavetable.hpp  GFilename.hpp  GFitPar.hpp  GFits.hpp  GFitsAsciiTable.hpp  GFitsBinTable.hpp  GFitsByteImage.hpp  GFitsCfitsio.hpp  GFitsData.hpp  GFitsDblImage.hpp  (+229 more)
inst/: Makefile.am  README.md
inst/com/: Makefile.am  README.md
inst/cta/: Makefile.am  README.md
inst/lat/: Makefile.am  README.md
inst/mwl/: Makefile.am  README.md
inst/spi/: Makefile.am  README.md
inst/template/: Makefile.am
pyext/: GApplication.i  GApplicationPar.i  GApplicationPars.i  GArf.i  GBase.i  GBilinear.i  GCTAObservation.i  GCaldb.i  GContainer.i  GCsv.i  GDaemon.i  GData.i  GDerivative.i  GEbounds.i  GEnergies.i  GEnergy.i  GEphemerides.i  GEvent.i  GEventAtom.i  GEventBin.i  GEventCube.i  GEventList.i  GEvents.i  GException.i  GFft.i  GFftWavetable.i  GFilename.i  GFitPar.i  GFits.i  GFitsAsciiTable.i  GFitsBinTable.i  GFitsData.i  GFitsDblImage.i  GFitsHDU.i  GFitsHeader.i  GFitsHeaderCard.i  GFitsImage.i  GFitsImageByte.i  GFitsImageDbl.i  GFitsImageDouble.i  (+216 more)
pyext/gammalib/: __init__.py.in  app.i  base.i  fits.i  linalg.i  model.i  numerics.i  obs.i  opt.i  sky.i  support.i  test.i  vo.i  xml.i  xspec.i
refdata/: Makefile.am  comptel_db_tofIV.txt  emission-factors.fits
src/: GData.cpp  GData.hpp  GException.cpp  GException.hpp  GFitPar.cpp  GHealpix.cpp  GImage.cpp  GMatrix.cpp  GMatrix.hpp  GNodeArray.cpp  GObservation.cpp  GObservation.hpp  GResponse.hpp  GSkyDir.cpp  GSkymap.cpp  GSparseMatrix.cpp  GSparseMatrix.hpp  GSparseNumeric.cpp  GSparseNumeric.hpp  GSparseSymbolic.cpp  GSparseSymbolic.hpp  GSymMatrix.cpp  GSymMatrix.hpp  GSymSparseMatrix.hpp  GTools.cpp  GTools.hpp  GVector.cpp  GVector.hpp  GammaLib.hpp  Makefile.am  Makefile.in  gammalib-init.csh  gammalib-init.sh  gammalib-setup.in  gammalibd.cpp
src/app/: GApplication.cpp  GApplication.hpp  GApplicationPar.cpp  GApplicationPars.cpp  GException_app.cpp  GLog.cpp  GPar.cpp  GPars.cpp  Makefile.am
src/base/: GBase.cpp  GRegistry.cpp  Makefile.am
src/cta/: GCTAAeff.cpp  GCTAEdisp.cpp  GCTAEventAtom.cpp  GCTAEventList.cpp  GCTAException.cpp  GCTAObservation.cpp  GCTAPsf.cpp  GCTAResponse.cpp  Makefile.am
src/data/: GData.cpp
src/fit/: GFitPar.cpp
src/fits/: GException_fits.cpp  GFits.cpp  GFitsAsciiTable.cpp  GFitsBinTable.cpp  GFitsByteImage.cpp  GFitsCfitsio.hpp  GFitsData.cpp  GFitsDblImage.cpp  GFitsHDU.cpp  GFitsHeader.cpp  GFitsHeaderCard.cpp  GFitsImage.cpp  GFitsImageByte.cpp  GFitsImageDbl.cpp  GFitsImageDouble.cpp  GFitsImageFloat.cpp  GFitsImageFlt.cpp  GFitsImageLong.cpp  GFitsImageLongLong.cpp  GFitsImageSByte.cpp  GFitsImageShort.cpp  GFitsImageULong.cpp  GFitsImageUShort.cpp  GFitsTable.cpp  GFitsTableBitCol.cpp  GFitsTableBoolCol.cpp  GFitsTableByteCol.cpp  GFitsTableCDoubleCol.cpp  GFitsTableCFloatCol.cpp  GFitsTableCol.cpp  GFitsTableDblCol.cpp  GFitsTableDoubleCol.cpp  GFitsTableFloatCol.cpp  GFitsTableFltCol.cpp  GFitsTableLlgCol.cpp  GFitsTableLngCol.cpp  GFitsTableLogCol.cpp  GFitsTableLongCol.cpp  GFitsTableLongLongCol.cpp  GFitsTableShortCol.cpp  (+8 more)
src/linalg/: GException_linalg.cpp  GMatrix.cpp  GMatrixBase.cpp  GMatrixSparse.cpp  GMatrixSymmetric.cpp  GMatrixTools.cpp  GSparseMatrix.cpp  GSparseNumeric.cpp  GSparseNumeric.hpp  GSparseSymbolic.cpp  GSparseSymbolic.hpp  GSymMatrix.cpp  GVector.cpp  Makefile.am
src/model/: GException_model.cpp  GModel.cpp  GModelAssociation.cpp  GModelAssociations.cpp  GModelData.cpp  GModelDiffuseSource.cpp  GModelExtendedSource.cpp  GModelFactorized.cpp  GModelPar.cpp  GModelPointSource.cpp  GModelRadial.cpp  GModelRadialDisk.cpp  GModelRadialGauss.cpp  GModelRadialRegistry.cpp  GModelRadialShell.cpp  GModelRegistry.cpp  GModelSky.cpp  GModelSpatial.cpp  GModelSpatialComposite.cpp  GModelSpatialConst.cpp  GModelSpatialCube.cpp  GModelSpatialDiffuse.cpp  GModelSpatialDiffuseConst.cpp  GModelSpatialDiffuseCube.cpp  GModelSpatialDiffuseMap.cpp  GModelSpatialDisk.cpp  GModelSpatialElliptical.cpp  GModelSpatialEllipticalDisk.cpp  GModelSpatialEllipticalGauss.cpp  GModelSpatialEllipticalGeneralGauss.cpp  GModelSpatialGauss.cpp  GModelSpatialMap.cpp  GModelSpatialPointSource.cpp  GModelSpatialPtsrc.cpp  GModelSpatialRadial.cpp  GModelSpatialRadialDisk.cpp  GModelSpatialRadialGauss.cpp  GModelSpatialRadialGeneralGauss.cpp  (+41 more)
src/numerics/: GFft.cpp  (+12 more)
test/: Makefile.am  Makefile.in  README  README.md  example_model_xml_io.py  example_radial_models.py  make_solidangle_image.py  test_GApplication.cpp  test_GApplication.hpp  test_GApplication.py  test_GData.cpp  test_GData.hpp  test_GFits.cpp  test_GFits.fits  test_GFits.hpp  test_GFits.py  test_GLinalg.py  test_GMatrix.cpp  test_GMatrix.hpp  test_GMatrixSparse.cpp  test_GMatrixSparse.hpp  test_GMatrixSymmetric.cpp  test_GMatrixSymmetric.hpp  test_GModel.cpp  test_GModel.hpp  test_GModel.py  test_GModelSpatialDisk.py  test_GModelSpatialShell.py  test_GNumerics.cpp  test_GNumerics.hpp  test_GNumerics.py  test_GObs.py  test_GObservation.cpp  test_GObservation.hpp  test_GObservation.py  test_GObservations.cpp  test_GObservations.hpp  test_GOptimizer.cpp  test_GOptimizer.hpp  test_GOptimizer.py  (+43 more)
(+1354 files in other folders)
